--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,3 +80,23 @@ width:80%
       color: rgb(255, 255, 255);
       background-color: black;
       }
+      .reset{
+        margin-top: 20px;
+        border: 1px solid black;
+        width:30%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        gap:25px;
+        align-items: center;
+        padding: 5%;
+        margin-top: 70px;
+      }
+      .reset>input{
+        width:80%
+        }
+  .reset>button{
+    width:80%;
+    color: rgb(255, 255, 255);
+   background-color: black;
+ }
